# prefect-stock-data-processing

./: .gitignore  pyproject.toml  stock_data_flow.py  stock_indicators.csv
output_stock_data/: IBM_stock_data.json
